@@ -11,6 +11,7 @@
 * [L#610321] Fix some warnings
 * Fix an uninitialized member issue resulting in random behaviour
 * [L#508641] Make bot disconnect asynchronous
+* Re-add missing bloom stats
 
 -- 2.5.2 2010-07-23 --
 * Compiled with C++0x support
